# llm-zoomcamp-2026

./: README.md  pyproject.toml
module-1/: README.md  agents.ipynb  notebook.ipynb  persistent_rag.ipynb  persistent_rag_ingest.ipynb  rag_clean.ipynb  rag_helper.py
module-2/: README.md  vector_rag.py
module-3/: README.md
module-4/: README.md  agent-eval.ipynb  data-gen.ipynb  rag-eval.ipynb  search-eval.ipynb
module-4/data/: agent-answers.csv  agent-evaluations.csv  ground_truth-new.csv  rag-answers-new.csv  rag-evaluations-new.csv
