[project]
name = "llm-zoomcamp-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gedit>=0.0.2",
    "jupyter>=1.1.1",
    "minsearch>=0.2.0",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "toyaikit>=0.0.11",
    "tqdm>=4.68.3",
]
